# learnscrape

./: .gitignore  CMakeLists.txt  README.md
docs/: CMakeLists.txt  learnscrape.md
include/learnscrape/: learn.h  scrape.h
lib/: lib.md
lib/nthslwned/include/nthslwned/: nthslwned.h
lib/nthslwned/src/: nthslwned.cpp
src/: learnscrape.cpp  netvoyager.rb
src/NumericalAlgorithms/InterpolationAlgorithms/: Obsolete_StandaloneInterpolation.cpp
src/NumericalAlgorithms/OptimisationAlgorithms/: Obsolete_StandaloneOptimisation.cpp
